# Codex-VOCR

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AUTOPILOT_LOG.md  BETA_KICKOFF_REVIEW.md  CLAUDE_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  Start-VOCR.bat  VOCR_Anleitung_Install_bis_Beta.md  VOCR_Autopilot_Prompt.md  VOCR_Beta_Testsequenz_Prompt.md  install-vocr.ps1  pyproject.toml  start-vocr.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: BETA_TESTING.md  BETA_TEST_CYCLES_L_C_S.md  CLI_REFERENCE.md  INSTALLATION.md  NORMAL_MODE_SURFACE.md  TESTING.md  THREAT_MODEL.md  VOCR_Roadmap.md
docs/beta/: SUMMARY.md
docs/beta/sessions/: 2026-07-16-jeenz-normalmode.md  README.md
src/vocr/: __init__.py  main.py  models.py  telemetry.py
src/vocr/agents/: __init__.py  architect.py  backend.py  common.py  docs.py  frontend.py  hybrid.py  organizer.py  qa.py  requirements.py  reviewer.py  runtime.py  security.py  tweak.py  visionary.py
src/vocr/beta/: __init__.py  catalog.py  cloud_scenarios.py  fixtures.py  report.py  runner.py  scenarios.py  workers.py
src/vocr/bus/: __init__.py  bus.py
src/vocr/cli/: __init__.py  app.py
tests/: _ansi.py  test_beta_catalog.py  test_beta_fixtures.py  test_beta_report.py  test_beta_runner.py  test_beta_scenarios.py  test_beta_workers.py  test_bootstrap.py  test_claims.py  test_cloud_scenarios.py  test_codex_review.py  test_normal_mode.py  test_parallel_workers.py  test_project_memory.py  test_readiness.py  test_workflow.py
(+29 files in other folders)
