[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vocr"
version = "0.1.0"
description = "VOCR: a local Vision / Organize / Code / Review orchestrator MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.3.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
]

[project.scripts]
vocr = "vocr.main:main"

[project.urls]
Repository = "https://github.com/JeansBraindead/Codex-VOCR"
"Reference: VOIT" = "https://github.com/yesitsfebreeze/voit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
